@@ -1,4 +1,5 @@
 6.0.3
+Just-In-Time install dotnet 8.0.0 for Business Central version 24 or above (needed by alc.exe)
 
 6.0.2
 Compile-AppInBcContainer: When checking whether symbol download is needed, the Application dependency wasn't checked for version number
